# hyperion.ng

./: BOOTSTRAP5_MIGRATION.md  CHANGELOG.md  CompileHowto.md  CrossCompileHowto.md  HYPERION_CSS_CLEANUP.md  LICENSE  README.md
.ci/: ci_build.sh
.github/workflows/: windows.yml
assets/webconfig/: index.html
assets/webconfig/content/: conf_colors.html  conf_effect.html  conf_events.html  conf_general.html  conf_grabber.html  conf_instcapture.html  conf_leds.html  conf_logging.html  conf_network.html  conf_webconfig.html  connection_lost.html  dashboard.html  effects_configurator.html  ie_not_supported.html  login.html  remote.html  restart.html  update.html
assets/webconfig/css/: ambilightwifi.css  bootstrap5-compat.css  hyperion.css
assets/webconfig/errorpages/: header.html
assets/webconfig/i18n/: de.json  en.json  vi.json
assets/webconfig/js/: ambilightwifi.js  content_colors.js  content_dashboard.js  content_effects.js  content_effectsconfigurator.js  content_events.js  content_general.js  content_grabber.js  content_huebridge.js  content_index.js  content_instcapture.js  content_leds.js  content_leds_layout.js  content_logging.js  content_network.js  content_remote.js  content_webconfig.js  hyperion.js  hyperionTheme.js  ledPreview.js  ledsim.js  settings.js  ui_utils.js  utils_jsoneditor.js  utils_ui.js  wizard.js
assets/webconfig/js/lib/: jsoneditor-2-16.0.js  sb-admin-2.js
assets/webconfig/js/wizards/: LedDevice_atmoorb.js  LedDevice_nanoleaf.js  LedDevice_philipshue.js  LedDevice_yeelight.js  (+2 more)
cmake/: Dependencies.cmake  packages.cmake
cmake/debian/: postinst  preinst  prerm
cmake/desktop/: ambilightwifi.desktop
cmake/osxbundle/: Info.plist  launch.sh
cmake/rpm/: postinst  preinst  prerm
config/: hyperion.config.json.commented
dependencies/: CMakeLists.txt
docs/: package.json
docs/docs/: README.md
docs/docs/.vuepress/: config.js
docs/docs/de/: README.md
effects/: readme.txt
include/api/: JsonAPI.h
include/db/: AuthTable.h
include/grabber/amlogic/: AmlogicGrabber.h
include/hyperion/: HyperionIManager.h
include/jsonserver/: JsonServer.h
include/webserver/: WebServer.h
libsrc/api/: API.cpp  JSONRPC_schemas.qrc  JsonAPI.cpp
libsrc/api/JSONRPC_schema/: schema-ssdp.json  schema.json
libsrc/bonjour/: bonjourbrowserwrapper.cpp
libsrc/grabber/amlogic/: AmlogicGrabber.cpp
libsrc/hyperion/: AuthManager.cpp  resource.qrc
libsrc/hyperion/schema/: schema-backgroundEffect.json  schema-blackborderdetector.json  schema-boblightServer.json  schema-cecEvents.json  schema-channelAdjustment.json  schema-color.json  schema-device.json  schema-effects.json  schema-eventActions.json  schema-flatbufServer.json  schema-foregroundEffect.json  schema-forwarder.json  schema-framegrabber.json  schema-general.json  schema-grabberAudio.json  schema-grabberV4L2.json  schema-imageProcessing.json  schema-instCapture.json  schema-jsonServer.json  schema-logger.json  schema-network.json  schema-osEvents.json  schema-protoServer.json  schema-schedEvents.json  schema-settings-ui.json  schema-smoothing.json  schema-webConfig.json
libsrc/jsonserver/: JsonServer.cpp
libsrc/leddevice/: LedDeviceWrapper.cpp
libsrc/leddevice/dev_net/: LedDeviceNanoleaf.h  LedDeviceUdpRaw.h  LedDeviceYeelight.cpp  LedDeviceYeelight.h
libsrc/leddevice/schemas/: schema-nanoleaf.json  schema-udpraw.json  schema-yeelight.json
libsrc/ssdp/: SSDPDescription.h  SSDPDiscover.cpp
libsrc/webserver/: WebServer.cpp
settings/: hyperion.settings.json.default
src/: CMakeLists.txt
src/ambilightwifi-aml/: AmlogicWrapper.h  CMakeLists.txt  ambilightwifi-aml.cpp
src/ambilightwifi-dispmanx/: CMakeLists.txt  DispmanxWrapper.cpp  DispmanxWrapper.h  ambilightwifi-dispmanx.cpp
src/ambilightwifi-framebuffer/: CMakeLists.txt  FramebufferWrapper.h
src/ambilightwifi-osx/: CMakeLists.txt  OsxWrapper.h
src/ambilightwifi-qt/: CMakeLists.txt
src/ambilightwifi-remote/: CMakeLists.txt  JsonConnection.cpp  ambilightwifi-remote.cpp
src/ambilightwifi-v4l2/: CMakeLists.txt  ScreenshotHandler.cpp  ambilightwifi-v4l2.cpp
src/ambilightwifi-x11/: CMakeLists.txt  X11Wrapper.cpp  X11Wrapper.h  ambilightwifi-x11.cpp
src/ambilightwifid/: CMakeLists.txt  ambilightwifid.cpp  main.cpp  systray.cpp  systray.h
src/hyperiond/: CMakeLists.txt  hyperiond.cpp  main.cpp  systray.cpp
test/: testrunner.sh
(+5 files in other folders)
